ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration8/input.ts.stderr
error[1123]: Variable declaration list cannot be empty
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration8/input.ts:1:4
  |
1 | var ;
  |    ^

